# vibecoding-signal-light

./: .gitignore  README.md  mcp2221a.py  pyproject.toml
docs/: LAMP_LANGUAGE.md  Windows.md
scripts/: claude-code-signal-hook  codex-signal-hook  install-hooks  signal-light
signal_light/: __init__.py  __main__.py  agent_signals.py  claude_code_hook.py  cli.py  codex_hook.py  hardware.py  runtime.py
tests/: test_agent_signals.py
