[project]
name = "signal-light"
version = "0.1.0"
description = "Physical traffic-light status display for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ai-agent",
    "codex",
    "claude-code",
    "gpio",
    "mcp2221a",
    "status-light",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: System :: Hardware",
]
dependencies = [
    "EasyMCP2221>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
signal-light = "signal_light.cli:main"
codex-signal-hook = "signal_light.codex_hook:main"
claude-code-signal-hook = "signal_light.claude_code_hook:main"

[project.urls]
Homepage = "https://github.com/starlight36/vibecoding-signal-light"
Repository = "https://github.com/starlight36/vibecoding-signal-light"
Issues = "https://github.com/starlight36/vibecoding-signal-light/issues"
